--- a/app/src/main/res/layout/activity_exercises.xml
+++ b/app/src/main/res/layout/activity_exercises.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSurface"
-    tools:context=".ExercisesActivity">
+    tools:context=".ui.exercise.ExercisesActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
