--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="Home" />
 
     <item
+        android:id="@+id/navigation_sessions"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="Sessions" />
+
+    <item
         android:id="@+id/navigation_exercises"
         android:icon="@android:drawable/ic_menu_directions"
         android:title="Exercises" />
