--- a/app/src/main/res/layout/activity_add_set.xml
+++ b/app/src/main/res/layout/activity_add_set.xml
@@ -17,15 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <EditText
-        android:id="@+id/edit_text_sets"
+    <TextView
+        android:id="@+id/text_view_set_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Sets"
-        android:inputType="number"
+        android:textAppearance="?attr/textAppearanceHeadline6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:text="Set: 1" />
 
     <EditText
         android:id="@+id/edit_text_reps"
@@ -35,7 +35,7 @@
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_sets" />
+        app:layout_constraintTop_toBottomOf="@+id/text_view_set_number" />
 
     <EditText
         android:id="@+id/edit_text_weight"
