--- a/app/src/main/res/layout/item_set.xml
+++ b/app/src/main/res/layout/item_set.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -24,6 +25,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="50 kg" />
+        android:layout_marginStart="16dp"
+        tools:text="100 kg" />
+
+    <ImageView
+        android:id="@+id/button_delete_set"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="4dp"
+        android:src="@android:drawable/ic_menu_delete"
+        android:scaleType="fitCenter" />
 
 </LinearLayout>
